--- a/clock.html
+++ b/clock.html
@@ -9,15 +9,15 @@
 <body>
     <div class="relogio">
         <div>
-            <span>00</span>
+            <span id="horas">00</span>
             <span class="butons">Horas</span>
         </div>
         <div>
-            <span>00</span>
+            <span id="minutos">00</span>
             <span class="butons">Minutos</span>
         </div>
         <div>
-            <span>00</span>
+            <span id="segundos">00</span>
             <span class="butons">Segundos</span>
         </div>
     </div>
